# Vertical

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  Makefile  alembic.ini  gunicorn.config.py  main.py  pyproject.toml  setup.cfg
docs/: client.md  deploy.md
examples/: docker-compose.yml
examples/hunter_migrations/: 000_create_yavert_schema.sql  001_create_submissions_table.sql  002_create_hundata_view.sql
migrations/: env.py  script.py.mako
migrations/versions/: 20200319161321_create_pgcrypto_extension.py  20200319162131_create_clients_table.py  20200319162226_create_contracts_table.py  20200319162321_create_requests_table.py  20200319162632_create_responses_table.py  20200319162832_create_identifications_table.py  20200420181250_create_admin_contract.py  20200424173045_create_yandex_vertical_contract.py  20200511154252_create_watcher_contract.py
nginx/: Dockerfile  nginx.conf
tests/: conftest.py  test_stupid.py
tests/app/: test_endpoints.py  test_error_handlers.py  test_middlewares.py  test_models.py
vertical/: __init__.py  hdrs.py
vertical/app/: __init__.py  adapters.py  alchemy.py  auth.py  endpoints.py  exception_handlers.py  factory.py  hunter.py  log.py  middlewares.py  models.py  protocols.py  responses.py  types.py  utils.py
